fix processor